# amplifier-app-wiki-weaver

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEMO.md  README.md  bundle.dot  bundle.md  hatch_build.py  pyproject.toml
.ai/: assessment.md
.github/: PULL_REQUEST_TEMPLATE.md
behaviors/: wiki-weaver.yaml
cli/: __main__.py  engine_runner.py  ingest_archive.py  ingest_fail.py  ingest_setup.py  ingest_tamper_check.py  lib.py  policy.py  wiki_weaver.py
context/: wiki-weaver-awareness.md
eval/: ask_scenarios.yaml  event_metrics.py  grade_claim_retention.py  grade_wiki.py  init_scenarios.yaml  model_sweep.py  rag_baseline.py  run_ab_eval.py  run_ask_eval.py  run_init_eval.py  test_any_text_ingest.py  test_assess_integrity.py  test_ci_config.py  test_claim_retention_backstop.py  test_cli_build_dashboard.py  test_crontab.py  test_dashboard.py  test_durable_drain.py  test_footnote_provenance.py  test_gate_advisory_mode.py  test_grade_phase_a.py  test_hatch_build.py  test_index_tools.py  test_ingest_drain.py  test_ingest_limit.py  test_instances.py  test_migrate.py  test_model_resolver.py  test_normalize_unicode.py  test_obsidian_ready.py  test_pidlock.py  test_policy_fallback.py  test_preflight_gate.py  test_provenance_unit.py  test_resolve_agent_bundle_concurrency.py  test_retention_contract.py  test_reweave.py  test_run_events_hook.py  test_run_events_source_resolution.py  test_run_ingest_backstops.py  (+12 more)
modules/hook-run-events/: pyproject.toml
modules/hook-run-events/amplifier_module_hook_run_events/: __init__.py
modules/tool-wiki-weaver/: pyproject.toml
modules/tool-wiki-weaver/amplifier_module_tool_wiki_weaver/: __init__.py
pipeline/: SCHEMA.md  ask.dot  build-dashboard.dot  build-dashboard.resolver.yaml  complete_bib.py  footnotes.py  ingest.dot  init.dot  lint.dot  normalize_links.py  normalize_unicode.py  synthesize.dot  validate_wiki.py  wiki-weaver-inner.dot
scripts/: fix_bib.py  fix_footnotes.py
wiki_weaver/: __init__.py  __main__.py  _assets.py  _version.py  _version_resolve.py  cli.py  crontab.py  dashboard.py  engine_runner.py  grading.py  index.py  ingest_archive.py  ingest_fail.py  ingest_setup.py  ingest_tamper_check.py  instances.py  lib.py  model_resolver.py  pidlock.py  policy.py  retention.py  reweave.py  run_result.py  (+4 more)
(+67 files in other folders)
