[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-weaver"
version = "0.1.0"
description = "LLM-wiki ingest pipeline driven by the attractor engine."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wiki-weaver = "cli.wiki_weaver:main"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.wheel.force-include]
"pipeline" = "wiki_weaver_pipeline"
